--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,29 @@
-test-results
+# Dependencies
 node_modules
+**/node_modules
 
-# Output
+# Test results
+test-results
+playwright-report
+coverage
+
+# Build output
 .output
 .vercel
 .netlify
 .wrangler
-/.svelte-kit
+.svelte-kit
+**/svelte-kit
 /build
+/dist
+**/build
+**/dist
 
-# OS
+# OS files
 .DS_Store
 Thumbs.db
 
-# Env
+# Environment variables
 .env
 .env.*
 !.env.example
@@ -23,5 +33,24 @@ Thumbs.db
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
+# Storybook
 *storybook.log
 storybook-static
+
+# IDE
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Temporary files
+*.tmp
+*.temp
+.cache
