--- a/package.json
+++ b/package.json
@@ -1,69 +1,40 @@
 {
   "name": "@srl/distraction-logger",
   "version": "0.1.0",
-  "description": "Svelte component for tracking distractions during focus sessions",
+  "description": "A Svelte component for tracking and analyzing distractions during work sessions",
   "type": "module",
-  "main": "./packages/distraction-logger/dist/index.js",
-  "types": "./packages/distraction-logger/dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./packages/distraction-logger/dist/index.d.ts",
-      "svelte": "./packages/distraction-logger/src/index.ts",
-      "default": "./packages/distraction-logger/dist/index.js"
+      "types": "./dist/index.d.ts",
+      "svelte": "./src/index.ts",
+      "default": "./dist/index.js"
     }
   },
   "files": [
-    "packages/distraction-logger/dist/**/*",
-    "packages/distraction-logger/src/**/*",
-    "packages/distraction-logger/package.json",
-    "packages/distraction-logger/README.md"
+    "dist",
+    "src"
   ],
+  "scripts": {
+    "build": "svelte-package",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
+  },
   "keywords": [
     "svelte",
     "component",
     "distraction-tracking",
     "focus",
-    "productivity"
+    "productivity",
+    "self-regulated-learning"
   ],
   "peerDependencies": {
     "svelte": "^5.0.0"
   },
-  "workspaces": [
-    "packages/*",
-    "demo"
-  ],
-  "scripts": {
-    "dev": "npm run dev --workspace=demo",
-    "build": "npm run build --workspaces --if-present",
-    "build:package": "npm run build --workspace=@srl/distraction-logger",
-    "prepare": "npm run build:package",
-    "test": "npm run test:unit -- --run && npm run test:e2e",
-    "test:unit": "vitest",
-    "test:e2e": "playwright test",
-    "storybook": "storybook dev -p 6006"
-  },
   "devDependencies": {
-    "@playwright/test": "^1.56.1",
-    "@storybook/addon-svelte-csf": "^5.0.10",
-    "@storybook/sveltekit": "^10.0.8",
-    "@sveltejs/adapter-auto": "^7.0.0",
-    "@sveltejs/kit": "^2.48.5",
-    "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.19",
-    "@tailwindcss/vite": "^4.1.17",
-    "@types/node": "^22",
-    "@vitest/browser-playwright": "^4.0.10",
-    "playwright": "^1.56.1",
-    "prettier": "^3.6.2",
-    "prettier-plugin-svelte": "^3.4.0",
-    "storybook": "^10.0.8",
+    "@sveltejs/package": "^2.0.0",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
-    "tailwindcss": "^4.1.17",
-    "typescript": "^5.9.3",
-    "vite": "^7.2.2",
-    "vitest": "^4.0.10",
-    "vitest-browser-svelte": "^2.0.1"
+    "typescript": "^5.9.3"
   }
 }
